<?xml version="1.0"?>
<package format="2">
  <name>ros_bno055</name>
  <version>0.0.0</version>
  <description>A ROS package containing a Linux hardware driver for Adafruit's BNO055 9-DoF Orientation Sensor Breakout and a ROS node wrapper that exposes the sensor driver to the ROS ecosystem.</description>

  <author email="tp@ubiquityrobotics.com">Teodor Janez Podobnik</author>
  <maintainer email="tp@ubiquityrobotics.com">Teodor Janez Podobnik</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
 
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
